--- a/Components/header/style.module.css
+++ b/Components/header/style.module.css
@@ -1,5 +1,39 @@
 .header{
     width: 100%;
-    height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 10vh;
     background-color: #594C2A;
+}
+
+.irSite{
+    width: 100%;
+    max-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    margin-left: 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.irSite p{
+    text-decoration: underline;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding-left: 8px;
+}
+
+.perfilMenu{
+    max-width: 180px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-decoration: none;
+    cursor: pointer;
 }
